--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": { "start": "node index.js" },
   "dependencies": {
+    "express": "^4.18.2",
     "dotenv": "^16.0.3",
     "googleapis": "^105.0.0",
     "node-telegram-bot-api": "^0.61.0"
